[gd_scene load_steps=9 format=3 uid="uid://cydn4sn5afbde"]

[ext_resource type="Script" uid="uid://ctxkhlj6ghvle" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="PackedScene" uid="uid://b2ghb5wuku086" path="res://Player/3rd_person_cam.tscn" id="1_l8h54"]
[ext_resource type="Script" uid="uid://bh7b34btwx806" path="res://Player/smooth_camera.gd" id="3_btcbx"]
[ext_resource type="Script" uid="uid://b4makbcamrbvl" path="res://TESTING_ASSESTS/test_floor_norm_grav_label.gd" id="4_gwnis"]

[sub_resource type="SphereShape3D" id="SphereShape3D_btcbx"]
radius = 1.0

[sub_resource type="PrismMesh" id="PrismMesh_4ntmi"]
size = Vector3(1, 1.094, 0.784)

[sub_resource type="SphereMesh" id="SphereMesh_l8h54"]

[sub_resource type="CylinderMesh" id="CylinderMesh_btcbx"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("camera_node")]
process_mode = 3
collision_layer = 2
floor_snap_length = 0.5
platform_on_leave = 2
script = ExtResource("1_4ntmi")
camera_node = NodePath("GravityRotation/3rdPersonCam")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_btcbx")

[node name="GravityRotation" type="Node3D" parent="."]
top_level = true

[node name="CamLerpPos" type="Marker3D" parent="GravityRotation"]

[node name="3rdPersonCam" parent="GravityRotation" node_paths=PackedStringArray("cam_lerp_node") instance=ExtResource("1_l8h54")]
cam_lerp_node = NodePath("../CamLerpPos")

[node name="FloorColCheck" type="RayCast3D" parent="GravityRotation"]
target_position = Vector3(0, -1.4, 0)

[node name="MeshRotationY" type="Node3D" parent="."]

[node name="MeshRotationZ" type="Node3D" parent="MeshRotationY"]

[node name="SmoothPlayer" type="Node3D" parent="."]
top_level = true
script = ExtResource("3_btcbx")
follow_target = NodePath("../MeshRotationY/MeshRotationZ")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SmoothPlayer"]
transform = Transform3D(0.724, 0, 0, 0, -1.24523, 1.08862e-07, 0, -6.32941e-08, -0.724, 0, -0.308898, 0)
mesh = SubResource("PrismMesh_4ntmi")
skeleton = NodePath("../../MeshRotationY/MeshRotationZ")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="SmoothPlayer"]
transform = Transform3D(0.637776, 0, 0, 0, -0.637776, 5.57562e-08, 0, -5.57562e-08, -0.637776, 0, 0.635454, -2.13163e-14)
mesh = SubResource("SphereMesh_l8h54")
skeleton = NodePath("../MeshInstance3D")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="SmoothPlayer"]
transform = Transform3D(0.362, 0, 0, 0, -1.58235e-08, 0.362, 0, -0.362, -1.58235e-08, 0, 0, -0.388559)
mesh = SubResource("CylinderMesh_btcbx")

[node name="Control" type="PanelContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 92.0
offset_top = -12.0
offset_right = 253.0
offset_bottom = 28.0
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 2
text = "asadasasdasdasdasa"
script = ExtResource("4_gwnis")
metadata/_edit_use_anchors_ = true
